Fixing overflow in kunskaper

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,6 @@ h3{
 	line-height: 120%;
 	background-color:#108588;
 	color:white;
-	overflow:scroll;
 	width: 15%;
 	min-width:158px;
 	margin-right:2%;
